# SMOT

./: .gitignore  CLAUDE.md  Dockerfile  MECLIS_ROADMAP_LLM.md  README.md  config.py  data.csv  data_validator.py  database.py  day1_simple.py  debug_scraper.py  docker-compose.yml  export_to_csv.py  fix_scraper_hardcoded.py  login_and_save_cookies.py  main.py  meclis.db  meclis_app.py  migrate_add_views.py  mock_scraper.py  render.yaml  requirements.txt  run.py  run_full_scrape.py  scraper_test_results.json  scraper_worker.py  scraper_worker_v4.py  start_brave.py  task.md  temp.txt  test.py  test_day1_final.py  test_scraper.py  test_split_day1.py  view_tweets.py  x_scraper.py  x_scrapper.py
.claude/: CLAUDE.md
analysis/: __init__.py  analyzer.py  embeddings.py  prompts.py  vector_db.py
backend/: .env.example  Dockerfile  build.sh  pyproject.toml  requirements-render.txt  requirements.txt
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  deps.py  schemas.py
backend/app/api/v1/: __init__.py  analytics.py  auth.py  chat.py  dashboard.py  exports.py  metrics.py  reports.py  router.py  schemas.py  tweets.py  users.py
backend/app/core/: __init__.py  config.py  constants.py  database.py  db_config.py  models.py  rate_limit.py  security.py
backend/app/services/: __init__.py
backend/app/services/agents/: __init__.py  base.py  classifier.py  meta_agent.py  reranker.py  retriever.py  summarizer.py
backend/app/services/analysis/: __init__.py  analyzer.py  chat_prompts.py  embeddings.py  metrics.py  prompts.py  schemas.py  vector_db.py
backend/app/services/chat/: __init__.py  chat_handler.py  hybrid_retriever.py  intent_parser.py  query_analyzer.py  query_cache.py  query_reasoner.py  response_generator.py  semantic_retriever.py  semantic_search.py  session_manager.py  turkish_nlp.py  tweet_classifier.py
backend/app/services/reporting/: __init__.py  metrics.py  pdf_generator.py  report_generator.py
backend/app/services/scraping/: __init__.py  instagram_api_scraper.py  instagram_scraper.py  profile_scraper.py  x_scraper.py
backend/app/utils/: __init__.py  logger.py  retry_config.py
backend/app/workers/: __init__.py  update_worker.py
backend/scripts/: migrate_add_instagram_columns.py  scrape.py  test_openai.py  test_party_normalization.py  update_instagram_data.py  update_instagram_engagement.py
backend/tests/: __init__.py  conftest.py  test_chat.py
chroma_db/: chroma.sqlite3
data/: Keçiören Meclis Üyeleri.xlsx  total_data.csv
docs/: BACKEND_GELISTIRME_ONERILERI.md  FRONTEND_GELISTIRME_ONERILERI.md  (+7 more)
(+105 files in other folders)
